# mcglue

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml  mcglue-entrypoint  test.sh
.github/workflows/: build.yml
ci/: ubuntu-install-packages
src/: bot.rs  interface.rs  jar.rs  main.rs  parsing.rs
src/bot/: crash.rs  download.rs  list.rs  nbtq.rs  run.rs  tpo.rs
