[package]
name = "mcglue"
version = "0.1.0"
edition = "2024"

[dependencies]
async-signal = "0.2.13"
bstr = "1.12.1"
chumsky = "0.12.0"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
fastnbt = "2.6.0"
futures = "0.3.31"
menv = "0.2.8"
pico-args = "0.5.0"
poise = "0.6.1"
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "rustls", "system-proxy"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "process", "rt-multi-thread"] }
