[package]
name = "mcglue"
version = "0.1.0"
edition = "2024"

[dependencies]
async-signal = "0.2.13"
bstr = "1.12.1"
btoi = "0.5.0"
chumsky = "0.12.0"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
fastnbt = "2.6.0"
flate2 = "1.1.8"
flume = "0.12.0"
menv = "0.2.8"
parking_lot = "0.12.5"
pico-args = "0.5.0"
poise = "0.6.1"
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "rustls", "system-proxy", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "parking_lot", "process", "rt-multi-thread"] }
uuid = { version = "1.20.0", features = ["v3", "v4"] }

[profile.release]
strip = true
