[package]
name = "mcglue"
version = "0.1.0"
edition = "2024"

[dependencies]
async-signal = "0.2"
bstr = "1"
btoi = "0.5"
chumsky = "0.12"
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
fastnbt = "2"
flate2 = "1"
flume = "0.12"
menv = "0.2"
parking_lot = "0.12"
poise = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "rustls", "system-proxy", "json"] }
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "parking_lot", "process", "rt-multi-thread"] }
uuid = { version = "1", features = ["v3", "v4"] }

[profile.release]
strip = true
